keycloak/deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      name: keycloak
  template:
    metadata:
      labels:
        name: keycloak
    spec:
      containers:
        - image: jboss/keycloak
          name: keycloak
          volumeMounts:
            - name: keycloak-share
              mountPath: /opt/jboss/keycloak/standalone/data/
      volumes:
        - name: keycloak-share
          persistentVolumeClaim:
            claimName: keycloak-share
