keycloak/service.yml
kind: Service
apiVersion: v1
metadata:
  name: keycloak
spec:
  selector:
    name: keycloak
  ports:
    - protocol: TCP
      port: 8080
      name: webui
