keycloak/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.fredriklowenhamn.se`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
  tls:
    certResolver: default
